--- a/index.html
+++ b/index.html
@@ -32,17 +32,16 @@
                         <nav class="header__menu">
                             <ul>
                                 <li><a href="index.html">home</a></li>
-                                <!-- <li><a href="order.html">order</a></li> -->
-                                <li><a href="traffic-statistic.html">traffic statistics</a></li>
+                                <li><a href="traffic-statistic-new.html">traffic statistics</a></li>
                                 <li><a href="faq.html">faq</a></li>
-                                <li><a href="blog.html">about us</a></li>
-                                <li><a href="#footercontact">contact</a></li>
+                                <li><a href="about-us.html">about us</a></li>
+                                <li><a href="#">contact</a></li>
                             </ul>
                         </nav>
                         <div class="header__sign">
                             <ul class="unloglist">
-                                <li><a href="#">login</a></li>
-                                <li><a href="#">registration</a></li>
+                                <li><a href="https://login.claroads.com/login.php">login</a></li>
+                                <li><a href="https://login.claroads.com/signup.php">registration</a></li>
                             </ul>
                             <ul class="loglist">
                                 <li><span>Hi, Alexander</span></li>
@@ -101,16 +100,15 @@
                 <img src="img/close.svg" alt="close">
             </button>
             <ul class="mobile-nav__menu">
-                <li><a href="#">Home</a></li>
-                <!-- <li><a href="#">Order</a></li> -->
-                <li><a href="#">Traffic Statistics</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">home</a></li>
+                <li><a href="traffic-statistic-new.html">traffic statistics</a></li>
+                <li><a href="faq.html">faq</a></li>
+                <li><a href="about-us.html">about us</a></li>
+                <li><a href="#">contact</a></li>
             </ul>
             <ul class="mobile-nav__sign">
-                <li><a href="#">login</a></li>
-                <li><a href="#">Registration</a></li>
+                <li><a href="https://login.claroads.com/login.php">login</a></li>
+                <li><a href="https://login.claroads.com/signup.php">registration</a></li>
             </ul>
             <ul class="mobile-nav__logined">
                 <li><span>Hi, Alexander</span></li>
@@ -150,7 +148,7 @@
                     </li>
                 </ul>
             </ul>
-            <a href="#" class="adsbtn">Order<span></span></a>
+            <a href="https://login.claroads.com/signup.php" class="adsbtn">Order<span></span></a>
         </div>
     </div>
     <div class="mobile-nav__bg">
@@ -221,7 +219,7 @@
                                     reach their audience and maximize revenue from their websites.
                                 </p>
                             </div>
-                            <a href="#" class="adsbtn" data-aos="fade-up" data-aos-delay="1000"
+                            <a href="traffic-statistic-new.html" class="adsbtn" data-aos="fade-up" data-aos-delay="1000"
                                 data-aos-duration="800">Order Website Traffic Now <span></span></a>
                         </div>
                     </div>
@@ -353,7 +351,7 @@
                         </h2>
                     </div>
                     <div class="col-xl-3 col-lg-4 d-flex align-items-center justify-content-lg-end">
-                        <a href="#" class="adsbtn">Order Website Traffic Now<span></span></a>
+                        <a href="traffic-statistic-new.html" class="adsbtn">Order Website Traffic Now<span></span></a>
                     </div>
                 </div>
             </div>
@@ -368,18 +366,17 @@
                     <div class="footer__text">
                         <p>
                             Before buying website traffic, please familiarize yourself with our Frequently Asked
-                            <a href="#">Questions</a> and read our <a href="#">Terms of Service</a>
+                            <a href="faq.html">Questions</a> and read our <a href="#">Terms of Service</a>
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="footer__nav">
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <!-- <li><a href="#">Order</a></li> -->
-                            <li><a href="#">Traffic Statistics</a></li>
-                            <li><a href="#">FAQ</a></li>
-                            <li><a href="#">About Us</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="traffic-statistic-new.html">Traffic Statistics</a></li>
+                            <li><a href="faq.html">FAQ</a></li>
+                            <li><a href="about-us.html">About Us</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
                         <a href="#" class="footer__fb">FACEBOOK</a>
