--- a/traffic-statistic-new-selected.html
+++ b/traffic-statistic-new-selected.html
@@ -13,7 +13,6 @@
     <!-- styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/rangeslider.css">
     <link rel="stylesheet" href="css/select2.min.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -27,25 +26,24 @@
             <div class="row">
                 <div class="col-xl-4 col-lg-3 d-flex align-items-center">
                     <div class="header__logo">
-                        <a href="#"><img src="img/logo.svg" alt="logo"></a>
+                        <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
                     </div>
                 </div>
                 <div class="col-xl-8 col-lg-9 d-flex justify-content-lg-end">
                     <div class="header__navs">
                         <nav class="header__menu">
                             <ul>
-                                <li><a href="#">home</a></li>
-                                <!-- <li><a href="#">order</a></li> -->
-                                <li><a href="#">traffic statistics</a></li>
-                                <li><a href="#">faq</a></li>
-                                <li><a href="#">about us</a></li>
+                                <li><a href="index.html">home</a></li>
+                                <li><a href="traffic-statistic-new.html">traffic statistics</a></li>
+                                <li><a href="faq.html">faq</a></li>
+                                <li><a href="about-us.html">about us</a></li>
                                 <li><a href="#">contact</a></li>
                             </ul>
                         </nav>
                         <div class="header__sign">
                             <ul class="unloglist">
-                                <li><a href="#">login</a></li>
-                                <li><a href="#">registration</a></li>
+                                <li><a href="https://login.claroads.com/login.php">login</a></li>
+                                <li><a href="https://login.claroads.com/signup.php">registration</a></li>
                             </ul>
                             <ul class="loglist">
                                 <li><span>Hi, Alexander</span></li>
@@ -85,7 +83,7 @@
                                     </li>
                                 </ul>
                             </ul>
-                            <a href="#" class="adsbtn">
+                            <a href="https://login.claroads.com/signup.php" class="adsbtn">
                                 Order
                                 <span></span>
                             </a>
@@ -104,16 +102,15 @@
                 <img src="img/close.svg" alt="close">
             </button>
             <ul class="mobile-nav__menu">
-                <li><a href="#">Home</a></li>
-                <!-- <li><a href="#">Order</a></li> -->
-                <li><a href="#">Traffic Statistics</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">home</a></li>
+                <li><a href="traffic-statistic-new.html">traffic statistics</a></li>
+                <li><a href="faq.html">faq</a></li>
+                <li><a href="about-us.html">about us</a></li>
+                <li><a href="#">contact</a></li>
             </ul>
             <ul class="mobile-nav__sign">
-                <li><a href="#">login</a></li>
-                <li><a href="#">Registration</a></li>
+                <li><a href="https://login.claroads.com/login.php">login</a></li>
+                <li><a href="https://login.claroads.com/signup.php">registration</a></li>
             </ul>
             <ul class="mobile-nav__logined">
                 <li><span>Hi, Alexander</span></li>
@@ -153,7 +150,7 @@
                     </li>
                 </ul>
             </ul>
-            <a href="#" class="adsbtn">Order<span></span></a>
+            <a href="https://login.claroads.com/signup.php" class="adsbtn">Order<span></span></a>
         </div>
     </div>
     <div class="mobile-nav__bg">
@@ -164,7 +161,7 @@
             <div class="container-ca">
                 <div class="breadcrumbsect">
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li>Traffic Statistics</li>
                     </ul>
                 </div>
@@ -469,17 +466,17 @@
                     <div class="footer__text">
                         <p>
                             Before buying website traffic, please familiarize yourself with our Frequently Asked
-                            <a href="#">Questions</a> and read our <a href="#">Terms of Service</a>
+                            <a href="faq.html">Questions</a> and read our <a href="#">Terms of Service</a>
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="footer__nav">
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Traffic Statistics</a></li>
-                            <li><a href="#">FAQ</a></li>
-                            <li><a href="#">About Us</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="traffic-statistic-new.html">Traffic Statistics</a></li>
+                            <li><a href="faq.html">FAQ</a></li>
+                            <li><a href="about-us.html">About Us</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
                         <a href="#" class="footer__fb">FACEBOOK</a>
@@ -491,10 +488,8 @@
     </footer>
 
     <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/aos.js"></script>
-    <script src="js/rangeslider.js"></script>
     <script src="js/select2.min.js"></script>
     <script src="js/sort-table.min.js"></script>
     <script src="js/common.js"></script>
