--- a/sitemap.html
+++ b/sitemap.html
@@ -20,30 +20,7 @@
 
 <body>
     <ul>
-        <!-- <li><a href="index.html" target="_blank" rel="noopener noreferrer">Main</a></li>
-        <li><a href="account-orders.html" target="_blank" rel="noopener noreferrer">Account (orders)</a></li>
-        <li><a href="account-personalinfo.html" target="_blank" rel="noopener noreferrer">Account (Edit Profile)</a>
-        </li>
-        <li><a href="blog.html" target="_blank" rel="noopener noreferrer">Blog</a></li>
-        <li><a href="blog-open.html" target="_blank" rel="noopener noreferrer">Blog Open</a></li>
-        <li><a href="error.html" target="_blank" rel="noopener noreferrer">404</a></li>
-        <li><a href="faq.html" target="_blank" rel="noopener noreferrer">FAQ</a></li>
-        <li><a href="login.html" target="_blank" rel="noopener noreferrer">Login</a></li>
-        <li><a href="order.html" target="_blank" rel="noopener noreferrer">Order</a></li>
-        <li><a href="password-new.html" target="_blank" rel="noopener noreferrer">New Password</a></li>
-        <li><a href="password-reset.html" target="_blank" rel="noopener noreferrer">Reset Password</a></li>
-        <li><a href="password-reset-v2.html" target="_blank" rel="noopener noreferrer">Reset Password (Resent)</a></li>
-        <li><a href="sign-error.html" target="_blank" rel="noopener noreferrer">Login (errors)</a></li>
-        <li><a href="signup.html" target="_blank" rel="noopener noreferrer">Sign Up</a></li>
-        <li><a href="terms.html" target="_blank" rel="noopener noreferrer">Terms</a></li>
-        <li><a href="thankyou.html" target="_blank" rel="noopener noreferrer">Thank You</a></li>
-        <li><a href="traffic-statistic.html" target="_blank" rel="noopener noreferrer">Traffic Statistic</a></li> -->
-
-
-
-
-
-        <br> <br> <br> <br> <br>
+        <h2>New Pages</h2>
         <li><a href="index.html" target="_blank" rel="noopener noreferrer">Main (updated)</a></li>
         <li><a href="faq.html" target="_blank" rel="noopener noreferrer">FAQ (updated)</a></li>
         <li><a href="about-us.html" target="_blank" rel="noopener noreferrer">About Us</a></li>
