--- a/contactus.html
+++ b/contactus.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ</title>
+    <title>Contact Us</title>
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -13,8 +13,10 @@
     <!-- styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/select2.min.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/responsive.css">
+
 </head>
 
 <body>
@@ -155,164 +157,82 @@
     </div>
 
     <main>
-        <div class="mainwrapper faq">
+        <div class="mainwrapper">
             <div class="container-ca">
                 <div class="breadcrumbsect">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li>FAQ</li>
+                        <li>Contact Us</li>
                     </ul>
                 </div>
-                <section class="faq-content">
-                    <p class="section-title">Frequently Asked Questions</p>
-                    <div class="faq-qustions">
-                        <div class="faq-qustionbox">
-                            <div class="num">01</div>
-                            <div class="cont">
-                                <p class="title">Where does your traffic come from?
-                                </p>
-                                <div class="descr">
-                                    <p>
-                                        We have large private ad network that has a combined 200 million visitors per
-                                        day. These visitors are sourced from a pop-under ads, expired domains and
-                                        redirects. When you purchase website traffic from us, your website is showed
-                                        until your target number of visitors is reached. We are a PPV (Pay Per Visit)
-                                        traffic network, so these visitors are being automatically redirected to your
-                                        website and a text ad or creative is not necessary.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="faq-qustionbox">
-                            <div class="num">02</div>
-                            <div class="cont">
-                                <p class="title">What is the referrer of the traffic?
-                                </p>
-                                <div class="descr">
-                                    <p>
-                                        Referrer will be claroads.com
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="faq-qustionbox">
-                            <div class="num">03</div>
-                            <div class="cont">
-                                <p class="title">What sites are allowed?
-                                </p>
-                                <div class="descr">
-                                    <p>
-                                        We allow all websites (adult included) as long as they are legal and don’t brake
-                                        any laws.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="faq-qustionbox">
-                            <div class="num">04</div>
-                            <div class="cont">
-                                <p class="title">Is this traffic AdSense safe?
-                                </p>
-                                <div class="descr">
-                                    <p>
-                                        We are not recommending to use our traffic for websites with Goole adsense code.
-                                        Google Adsense doesn't prohibit buying traffic, what they are not allowing is
-                                        software manipulating the clicks on their ads. Since we're sending real human
-                                        traffic to your website, our services don't fall into this category. However
-                                        even if it is not written in their terms, they don’t like paid traffic and your
-                                        account might be suspended.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="faq-qustionbox">
-                            <div class="num">05</div>
-                            <div class="cont">
-                                <p class="title">Will Google Analytics will show visitors sent to my site?
-                                </p>
-                                <div class="descr">
-                                    <p>
-                                        It will show lower number of visitors compared to our stats. The stats in your
-                                        members area show 100% of your visitors since we track all visitors before
-                                        redirecting them to your website. Other trackers (such as Google analytics or
-                                        awstats) show lower number because some visitors close website before it loads
-                                        tracker code, some might now have javascript support, etc.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="faq-qustionbox">
-                            <div class="num">06</div>
-                            <div class="cont">
-                                <p class="title">How long does it take for my campaign to start after purchase?
-                                </p>
-                                <div class="descr">
-                                    <p>
-                                        Most new campaigns are approved within 24 hours on average.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="faq-qustionbox">
-                            <div class="num">07</div>
-                            <div class="cont">
-                                <p class="title">How can I track the traffic that I purchase?
-                                </p>
-                                <div class="descr">
-                                    <p>
-                                        In the members area you will see detailed traffic statistics for your campaigns.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="faq-qustionbox">
-                            <div class="num">08</div>
-                            <div class="cont">
-                                <p class="title">What will visitors "bounce rate" and "time spent on site"?
-                                </p>
-                                <div class="descr">
-                                    <p>
-                                        It depends on your website, but generally websites with faster loading time have
-                                        better bounce rate statistics. Most of our traffic is POP based, so you can
-                                        expect high bounce rate and low time spent on site due to the nature of this
-                                        traffic.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="faq-qustionbox">
-                            <div class="num">09</div>
-                            <div class="cont">
-                                <p class="title">What if I have other questions, which are not listed here?
-                                </p>
-                                <div class="descr">
-                                    <a href="#">Do you have other questions? click here</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
             </div>
-            <section class="buytraff">
+            <div class="traffstat__topscreen trnew trnew__terms contacts">
                 <div class="container-ca">
                     <div class="row">
-                        <div class="col-xl-9 col-lg-8 d-flex align-items-center">
-                            <h2>
-                                <span>buy</span>
-                                Website Traffic
-                            </h2>
+                        <div class="col-lg-8 offset-lg-2">
+                            <h1>
+                                <span class="trtext">STAY IN TOUCH</span>
+                                WITH US
+                            </h1>
+                            <p class="descr">
+                                Do you have any questions? Fill in the form and we will get back to you
+                            </p>
                         </div>
-                        <div class="col-xl-3 col-lg-4 d-flex align-items-center justify-content-lg-end">
-                            <a href="traffic-statistic-new.html" class="adsbtn">Order Website Traffic
-                                Now<span></span></a>
+                    </div>
+                </div>
+            </div>
+            <section class="contactscontent">
+                <div class="container-ca">
+                    <div class="row justify-content-center">
+                        <div class="col-xl-8">
+                            <div class="contsection">
+                                <div class="contsection__info">
+                                    <ul>
+                                        <li>
+                                            CLAROADS.COM WEBSITE IF OWNED
+                                            <span>BY COMPANY CLARO LT, UAB.</span>
+                                        </li>
+                                        <li>
+                                            VAT NO:
+                                            <span>LT100011941119</span>
+                                        </li>
+                                        <li>
+                                            COMPANY REGISTRATION CODE:
+                                            <span>304932072</span>
+                                        </li>
+                                        <li>
+                                            REGISTRATION COUNTRY:
+                                            <span>LITHUANIA (EUROPEAN UNION)</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="contsection__form">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <input type="text" placeholder="Name">
+                                        </div>
+                                        <div class="col-md-6">
+                                            <input type="email" placeholder="Email">
+                                        </div>
+                                        <div class="col-12">
+                                            <textarea placeholder="Message"></textarea>
+                                        </div>
+                                    </div>
+                                    <button type="submit" class="adsbtn adsbtn__blue">
+                                        Send
+                                        <span></span>
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </section>
+
         </div>
     </main>
 
-    <footer class="footer">
+    <footer class="footer blueline">
         <div class="fblueline"></div>
         <div class="container-ca">
             <div class="row">
@@ -342,14 +262,25 @@
         </div>
     </footer>
 
-
-    <!-- container-ca -->
-
-
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/aos.js"></script>
+    <script src="js/select2.min.js"></script>
+    <script src="js/sort-table.min.js"></script>
     <script src="js/common.js"></script>
+
+
+
+
+
+    <style>
+
+    </style>
+
+
+
+
+
 </body>
 
 </html>
