--- a/traffic-statistic-new.html
+++ b/traffic-statistic-new.html
@@ -37,7 +37,7 @@
                                 <li><a href="traffic-statistic-new.html">traffic statistics</a></li>
                                 <li><a href="faq.html">faq</a></li>
                                 <li><a href="about-us.html">about us</a></li>
-                                <li><a href="#">contact</a></li>
+                                <li><a href="contactus.html">contact</a></li>
                             </ul>
                         </nav>
                         <div class="header__sign">
@@ -106,7 +106,7 @@
                 <li><a href="traffic-statistic-new.html">traffic statistics</a></li>
                 <li><a href="faq.html">faq</a></li>
                 <li><a href="about-us.html">about us</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="contactus.html">contact</a></li>
             </ul>
             <ul class="mobile-nav__sign">
                 <li><a href="https://login.claroads.com/login.php">login</a></li>
@@ -463,7 +463,8 @@
                     <div class="footer__text">
                         <p>
                             Before buying website traffic, please familiarize yourself with our Frequently Asked
-                            <a href="faq.html">Questions</a> and read our <a href="#">Terms of Service</a>
+                            <a href="faq.html">Questions</a> and read our <a href="termsofservice.html">Terms of
+                                Service</a>
                         </p>
                     </div>
                 </div>
@@ -474,7 +475,7 @@
                             <li><a href="traffic-statistic-new.html">Traffic Statistics</a></li>
                             <li><a href="faq.html">FAQ</a></li>
                             <li><a href="about-us.html">About Us</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="contactus.html">Contact</a></li>
                         </ul>
                         <a href="#" class="footer__fb">FACEBOOK</a>
                     </div>
