--- a/sitemap.html
+++ b/sitemap.html
@@ -29,7 +29,8 @@
         <li><a href="traffic-statistic-new-selected.html" target="_blank" rel="noopener noreferrer">Traffic Statistic
                 (new) - selected</a>
         </li>
-
+        <li><a href="termsofservice.html" target="_blank" rel="noopener noreferrer">Terms of Service</a></li>
+        <li><a href="contactus.html" target="_blank" rel="noopener noreferrer">Contact Us</a></li>
     </ul>
     <style>
         body {
