--- a/traffic-statistic-datatable.html
+++ b/traffic-statistic-datatable.html
@@ -45,6 +45,12 @@
         table.dataTable tbody tr{
             background: none;
         }
+        tbody .selectedcountry {
+            background: rgba(59, 185, 255, 0.1) !important;
+        }
+        #sortable tbody p img {
+            order: -1;
+        }
     </style>
 </head>
 
