--- a/traffic-statistic-new.html
+++ b/traffic-statistic-new.html
@@ -81,12 +81,11 @@
                     <div class="header__navs">
                         <nav class="header__menu">
                             <ul>
-                                <li><a href="#">home</a></li>
-                                <!-- <li><a href="#">order</a></li> -->
-                                <li><a href="#">traffic statistics</a></li>
-                                <li><a href="#">faq</a></li>
-                                <li><a href="#">about us</a></li>
-                                <li><a href="#">contact</a></li>
+                                <li><a href="index.html">home</a></li>
+                                <li><a href="traffic-statistic-new.html">traffic statistics</a></li>
+                                <li><a href="faq.html">faq</a></li>
+                                <li><a href="about-us.html">about us</a></li>
+                                <li><a href="contactus.html">contact</a></li>
                             </ul>
                         </nav>
                         <div class="header__sign">
